# sdl-threadpool-tasks

./: .gitignore  CMakeLists.txt  CMakePresets.json  readme.md
cmake/: LinuxPresets.cmake  StdModules.cmake  Win32Presets.cmake  import-std.cmake
src/: CMakeLists.txt  example.ixx  main.cpp
